changed color and finished building

--- a/index.html
+++ b/index.html
@@ -69,30 +69,30 @@
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="bi-question-circle fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Consultations et Évaluations</h3>
                             <p class="text-muted mb-0">Pendant votre consultation gratuite chez Canada Teranga, nous aborderons vos objectifs et préoccupations en matière d'immigration. Nous offrons des conseils personnalisés sur les visas, les permis, le parrainage, et plus encore, pour faciliter votre parcours d'immigration.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="bi-book fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Permis d'Études</h3>
                             <p class="text-muted mb-0">Nous vous aidons à obtenir votre permis d'études pour poursuivre vos études au Canada. Nos services comprennent l'évaluation de l'admissibilité, l'aide à la demande et l'orientation. Laissez-nous simplifier votre parcours d'études au Canada</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="bi-briefcase fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Permis de Travail</h3>
                             <p class="text-muted mb-0">Nous vous aidons à obtenir votre permis de travail pour travailler au Canada. Nos services comprennent l'évaluation de l'admissibilité, l'assistance à la demande et un soutien continu. Simplifiez votre parcours vers le travail au Canada avec nous.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="bi-map fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Visa de Visiteur</h3>
-                            <p class="text-muted mb-0">Whether you're visiting family, exploring tourist attractions, or attending business meetings, we assist you in obtaining your visitor visa to travel to Canada. Our services include eligibility assessment, application assistance, and ongoing support throughout the process. We're here to facilitate your journey to Canada as a visitor.</p>
+                            <p class="text-muted mb-0">Que vous rendiez visite à votre famille, exploriez les attractions touristiques ou assistiez à des réunions d'affaires, nous vous aidons à obtenir votre visa de visiteur pour voyager au Canada. Nos services comprennent une évaluation de l'admissibilité, une assistance à la demande et un soutien continu tout au long du processus. Nous sommes là pour faciliter votre voyage au Canada en tant que visiteur.</p>
                         </div>
                     </div>
                 </div>
@@ -101,8 +101,8 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+                <h2 class="mb-4">Accédez aux Dernières Mises à Jour sur l'Immigration Directement depuis les Sources Officielles</h2>
+                <a class="btn btn-light btn-xl" href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Site officiel</a>
             </div>
         </section>
         <!-- Portfolio-->
@@ -185,16 +185,16 @@
                         <!-- To make this form functional, sign up at-->
                         <!-- https://startbootstrap.com/solution/contact-forms-->
                         <!-- to get an API token!-->
-                        <form id="contactForm" action="https://formsubmit.co/maman_diarra89@hotmail.com" method="POST">
+                        <form id="contactForm" action="https://formsubmit.co/recrudemande@gmail.com" method="POST">
                             <!-- Nationality input -->
                             <div class="form-floating mb-3">
                                 <select class="added-input form-control" name="service" id="service" required>
                                     <option value=""></option>
-                                    <option value="">Consultations et Évaluations</option>
-                                    <option value="">Permis d'Études</option>
-                                    <option value="">Permis de Travail</option>
-                                    <option value="">Visa de Visiteur</option>
-                                    <option value="">Autre</option>
+                                    <option value="Consultations et Évaluations">Consultations et Évaluations</option>
+                                    <option value="Permis d'Études">Permis d'Études</option>
+                                    <option value="Permis de Travail">Permis de Travail</option>
+                                    <option value="Visa de Visiteur">Visa de Visiteur</option>
+                                    <option value="Autre">Autre (précisez dans le message)</option>
                                 </select>
                                 <label for="service">Service</label>
                             </div>
@@ -223,7 +223,7 @@
                             <!-- Age input -->
                             <div class="form-floating mb-3">
                                 <input name="Age"  class="form-control" id="age" type="number" placeholder="Enter your age..." required/>
-                                <label for="phone">Âge</label>
+                                <label for="age">Âge</label>
                             </div>
                             <!-- Message input-->
                             <div class="form-floating mb-3">
@@ -238,6 +238,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-4 text-center mb-5 mb-lg-0">
                         <i class="bi-phone fs-2 mb-3 text-muted"></i>
+                        <div>WhatsApp</div>
                         <div>+1 (438) 227-3378 / +1 (418) 456-0094</div>
                     </div>
                 </div>
